finish basic workflow
