# ModuleManagementClient/src/app/core/modules/openapi/api/feedback-controller.serviceInterface.ts
@@ -12,6 +12,7 @@ import { HttpHeaders }                                       from '@angular/comm
 import { Observable }                                        from 'rxjs';
 
 import { Feedback } from '../model/models';
+import { ModuleVersionUpdateRequestDTO } from '../model/models';
 import { RejectFeedbackDTO } from '../model/models';
 import { UserIdDTO } from '../model/models';
 
@@ -38,6 +39,13 @@ export interface FeedbackControllerServiceInterface {
      * @param id 
      */
     getFeedbacksForUser(id: number, extraHttpRequestParams?: any): Observable<Array<Feedback>>;
+
+    /**
+     * 
+     * 
+     * @param feedbackId 
+     */
+    getModuleVersionOfFeedback(feedbackId: number, extraHttpRequestParams?: any): Observable<ModuleVersionUpdateRequestDTO>;
 
     /**
      * 
